# closm-probe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STARFIELD_STATUS.md  package-lock.json  package.json
docs/: README.md
docs/design/: camera.md  ecs-architecture.md  index.md  metaphor-mapping.md  persistent-cache.md  product-design.md  scene-graph.md  size-calculation.md  ui.md  visual-encoding.md
docs/reference/: bevy-notes.md  size-calculation-research.md
docs/reference/sidebar-ux/: chatgpt-analysis.md  claude-analysis.md  closm-gap-analysis.md  common-principles.md  general-patterns.md  index.md
docs/requirements/: index.md  metaphor.md  product-requirements.md  size-calculation.md  tech.md  ui-ux.md  visual.md
docs/specifications/: canvas-rendering.md  metaphor-mapping.md
src/: bundles.rs  events.rs  main.rs  states.rs
src/app/: page.tsx
src/app/actions/: filesystem.ts
src/components/: PhysicalStorageUniverse.tsx  animation.rs  celestial.rs  interaction.rs  mod.rs  visual.rs
src/components/universe/: UniverseCanvas.tsx  types.ts
src/components/universe/controls/: CameraController.tsx
src/components/universe/effects/: OrbitLines.tsx  StarField.tsx
src/components/universe/nodes/: AsteroidBelt.tsx  FileNode.tsx  (+1 more)
src/resources/: cache.rs  config.rs  mod.rs  navigation.rs  persistent_cache.rs  ui_state.rs
src/systems/: camera.rs  cleanup.rs  filesystem.rs  interaction.rs  mod.rs  setup.rs  spawning.rs  ui.rs
src/systems/size_calculation/: jwalk_calc.rs  macos_du.rs  mod.rs  spotlight.rs
src/utils/: mod.rs  viewport.rs  visual_encoding.rs
(+1 files in other folders)
