[package]
name = "closm-probe"
version = "0.1.0"
edition = "2024"
description = "3D storage visualization tool - Universe metaphor for file systems"
license = "MIT"

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }

# GPU Particles for visual effects
bevy_hanabi = { version = "0.17", default-features = false, features = ["3d"] }

# UI
bevy_egui = "0.32"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
