[package]
name = "closm-probe"
version = "0.1.0"
edition = "2024"
description = "3D storage visualization tool - Universe metaphor for file systems"
license = "MIT"

[dependencies]
bevy = "0.15"
bevy_egui = "0.31"
bevy_panorbit_camera = "0.22"
bevy_hanabi = "0.14"
rfd = "0.15"
dark-light = "1.0"
futures-lite = "2.6.1"
jwalk = "0.8"
crossbeam-channel = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
